- add seeder - remove unused

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -100,16 +100,11 @@
     "/js/scripts/forms/form-validation.js": "/js/scripts/forms/form-validation.js",
     "/js/scripts/forms/form-wizard.js": "/js/scripts/forms/form-wizard.js",
     "/js/scripts/forms/pickers/form-pickers.js": "/js/scripts/forms/pickers/form-pickers.js",
-    "/js/scripts/pages/app-user-edit.js": "/js/scripts/pages/app-user-edit.js",
-    "/js/scripts/pages/app-user-list.js": "/js/scripts/pages/app-user-list.js",
-    "/js/scripts/pages/app-user-view.js": "/js/scripts/pages/app-user-view.js",
-    "/js/scripts/pages/dashboard-analytics.js": "/js/scripts/pages/dashboard-analytics.js",
-    "/js/scripts/pages/page-account-settings.js": "/js/scripts/pages/page-account-settings.js",
+    "/js/scripts/maps/map-leaflet.js": "/js/scripts/maps/map-leaflet.js",
     "/js/scripts/pages/page-auth-forgot-password.js": "/js/scripts/pages/page-auth-forgot-password.js",
     "/js/scripts/pages/page-auth-login.js": "/js/scripts/pages/page-auth-login.js",
     "/js/scripts/pages/page-auth-register.js": "/js/scripts/pages/page-auth-register.js",
     "/js/scripts/pages/page-auth-reset-password.js": "/js/scripts/pages/page-auth-reset-password.js",
-    "/js/scripts/pages/page-knowledge-base.js": "/js/scripts/pages/page-knowledge-base.js",
     "/js/scripts/pagination/components-pagination.js": "/js/scripts/pagination/components-pagination.js",
     "/js/scripts/tables/table-ag-grid.js": "/js/scripts/tables/table-ag-grid.js",
     "/js/scripts/tables/table-datatables-advanced.js": "/js/scripts/tables/table-datatables-advanced.js",
@@ -459,7 +454,16 @@
     "/vendors/js/waves/waves.min.js": "/vendors/js/waves/waves.min.js",
     "/vendors/css/animate/animate.css": "/vendors/css/animate/animate.css",
     "/vendors/css/animate/animate.min.css": "/vendors/css/animate/animate.min.css",
+    "/vendors/css/calendars/extensions/daygrid.min.css": "/vendors/css/calendars/extensions/daygrid.min.css",
+    "/vendors/css/calendars/extensions/timegrid.min.css": "/vendors/css/calendars/extensions/timegrid.min.css",
+    "/vendors/css/calendars/fullcalendar.min.css": "/vendors/css/calendars/fullcalendar.min.css",
+    "/vendors/css/calendars/fullcalendar.print.css": "/vendors/css/calendars/fullcalendar.print.css",
+    "/vendors/css/charts/apexcharts.css": "/vendors/css/charts/apexcharts.css",
     "/vendors/css/documentation.css": "/vendors/css/documentation.css",
+    "/vendors/css/editors/quill/katex.min.css": "/vendors/css/editors/quill/katex.min.css",
+    "/vendors/css/editors/quill/monokai-sublime.min.css": "/vendors/css/editors/quill/monokai-sublime.min.css",
+    "/vendors/css/editors/quill/quill.bubble.css": "/vendors/css/editors/quill/quill.bubble.css",
+    "/vendors/css/editors/quill/quill.snow.css": "/vendors/css/editors/quill/quill.snow.css",
     "/vendors/css/extensions/dataTables.checkboxes.css": "/vendors/css/extensions/dataTables.checkboxes.css",
     "/vendors/css/extensions/dragula.min.css": "/vendors/css/extensions/dragula.min.css",
     "/vendors/css/extensions/jquery.contextMenu.min.css": "/vendors/css/extensions/jquery.contextMenu.min.css",
@@ -476,12 +480,15 @@
     "/vendors/css/extensions/toastr.min.css": "/vendors/css/extensions/toastr.min.css",
     "/vendors/css/extensions/unslider.css": "/vendors/css/extensions/unslider.css",
     "/vendors/css/feather-icons/feather-icons.min.css": "/vendors/css/feather-icons/feather-icons.min.css",
+    "/vendors/css/file-uploaders/dropzone.min.css": "/vendors/css/file-uploaders/dropzone.min.css",
     "/vendors/css/flag-icons/flag-icons.min.css": "/vendors/css/flag-icons/flag-icons.min.css",
     "/vendors/css/forms/select/select2.min.css": "/vendors/css/forms/select/select2.min.css",
     "/vendors/css/forms/spinner/jquery.bootstrap-touchspin.css": "/vendors/css/forms/spinner/jquery.bootstrap-touchspin.css",
     "/vendors/css/forms/toggle/switchery.css": "/vendors/css/forms/toggle/switchery.css",
     "/vendors/css/forms/toggle/switchery.min.css": "/vendors/css/forms/toggle/switchery.min.css",
     "/vendors/css/forms/wizard/bs-stepper.min.css": "/vendors/css/forms/wizard/bs-stepper.min.css",
+    "/vendors/css/jkanban/jkanban.min.css": "/vendors/css/jkanban/jkanban.min.css",
+    "/vendors/css/maps/leaflet.min.css": "/vendors/css/maps/leaflet.min.css",
     "/vendors/css/modal/facebook.css": "/vendors/css/modal/facebook.css",
     "/vendors/css/modal/google.css": "/vendors/css/modal/google.css",
     "/vendors/css/modal/twitter.css": "/vendors/css/modal/twitter.css",
@@ -494,6 +501,8 @@
     "/vendors/css/pickers/pickadate/default.css": "/vendors/css/pickers/pickadate/default.css",
     "/vendors/css/pickers/pickadate/default.time.css": "/vendors/css/pickers/pickadate/default.time.css",
     "/vendors/css/pickers/pickadate/pickadate.css": "/vendors/css/pickers/pickadate/pickadate.css",
+    "/vendors/css/tables/ag-grid/ag-grid.css": "/vendors/css/tables/ag-grid/ag-grid.css",
+    "/vendors/css/tables/ag-grid/ag-theme-material.css": "/vendors/css/tables/ag-grid/ag-theme-material.css",
     "/vendors/css/tables/datatable/buttons.bootstrap4.min.css": "/vendors/css/tables/datatable/buttons.bootstrap4.min.css",
     "/vendors/css/tables/datatable/dataTables.bootstrap4.min.css": "/vendors/css/tables/datatable/dataTables.bootstrap4.min.css",
     "/vendors/css/tables/datatable/datatables.min.css": "/vendors/css/tables/datatable/datatables.min.css",
@@ -508,6 +517,13 @@
     "/vendors/css/vendors.min.css": "/vendors/css/vendors.min.css",
     "/vendors/css/waves/waves.min.css": "/vendors/css/waves/waves.min.css",
     "/vendors/css/weather-icons/climacons.min.css": "/vendors/css/weather-icons/climacons.min.css",
+    "/vendors/css/maps/images/layers-2x.png": "/vendors/css/maps/images/layers-2x.png",
+    "/vendors/css/maps/images/layers.png": "/vendors/css/maps/images/layers.png",
+    "/vendors/css/maps/images/marker-icon-2x.png": "/vendors/css/maps/images/marker-icon-2x.png",
+    "/vendors/css/maps/images/marker-icon.png": "/vendors/css/maps/images/marker-icon.png",
+    "/vendors/css/maps/images/marker-shadow.png": "/vendors/css/maps/images/marker-shadow.png",
+    "/vendors/css/editors/quill/fonts/KaTeX_Main-Regular.woff2": "/vendors/css/editors/quill/fonts/KaTeX_Main-Regular.woff2",
+    "/vendors/css/editors/quill/fonts/KaTeX_Math-Italic.woff2": "/vendors/css/editors/quill/fonts/KaTeX_Math-Italic.woff2",
     "/fonts/feather/iconfont.css": "/fonts/feather/iconfont.css",
     "/fonts/flag-icon-css/css/flag-icon.css": "/fonts/flag-icon-css/css/flag-icon.css",
     "/fonts/flag-icon-css/css/flag-icon.min.css": "/fonts/flag-icon-css/css/flag-icon.min.css",
